<?xml version="1.0"?>
<package format="2">
  <name>dc_vmapping</name>
  <description>
     dc_vmapping 
  </description>
  <author>...</author>
  <license>new BSD</license>
  <maintainer email="dingxiaq@gmail.com">dxq</maintainer>
  
  <version>0.2.0</version>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>libpointmatcher</build_depend>
  <build_depend>libpointmatcher_ros</build_depend>
  <build_depend>ethzasl_gridmap_2d</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>g2o</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>libpointmatcher</exec_depend>
  <exec_depend>libpointmatcher_ros</exec_depend>
  <exec_depend>ethzasl_gridmap_2d</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libnabo</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sophus</exec_depend>
  <exec_depend>g2o</exec_depend>
  
  
    <export>
    <!-- Other tools can request additional information be placed here -->
	<nodelet plugin="${prefix}/vill_nodelet_plugin.xml" />
	<cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lvill_odom_nodelet"/>
  </export>
</package>


